
New features
 - [core] email alarms now have pretty formatting (#805)

Enhancements
 - [core] improved event initation for all day events (#4145)
 - [web] improved interface refresh time with external IMAP accounts
 - [eas] added photo support for GAL search operations

Bug fixes
 - [web] fixed attachment path when inside multiple body parts
 - [web] fixed email reminder with attendees (#4115)
 - [core] cherry-picked comma escaping fix from v2 (#3296)
 - [core] fix sogo-tool restore potentially crashing on corrupted data (#4048)
 - [core] handle properly mails using windows-1255 charset (#4124)
 - [core] fixed email reminders sent multiple times (#4100)
 - [core] fixed LDIF to vCard conversion for non-handled multi-value attributes (#4086)
 - [eas] set reply/forwarded flags when ReplaceMime is set (#4133)
 - [eas] remove alarms over EAS if we don't want them (#4059)
 - [eas] correctly set RSVP on event invitations
 - [eas] avoid sending IMIP request/update messages for all EAS clients (#4022)

3.2.8 (2017-03-24)
------------------

New features
 - [core] new sogo-tool manage-acl command to manage calendar/address book ACLs

Enhancements
 - [web] constrain event/task reminder to a positive number
 - [web] display year in day and week views
 - [web] split string on comma and semicolon when pasting multiple addresses (#4097)
 - [web] restrict Draft/Sent/Trash/Junk mailboxes to the top level
 - [web] animations are automatically disabled under IE11
 - [web] updated Angular Material to version 1.1.3

Bug fixes
 - [core] handle broken CalDAV clients sending bogus SENT-BY (#3992)
 - [core] fixed handling of exdates and proper intersection for fbinfo (#4051)
 - [core] remove attendees that have the same identity as the organizer (#3905)
 - [web] fixed ACL editor in admin module for Safari (#4036)
 - [web] fixed function call when removing contact category (#4039)
 - [web] localized mailbox names everywhere (#4040, #4041)
 - [web] hide fab button when printing (#4038)