@@ -233,13 +233,13 @@
               <md-input-container class="md-block" flex="50">
                 <label><var:string label:value="New password"/>
                 </label>
-	        <input type="password" ng-model="app.passwords.newPassword"/>
+	        <input type="password" sg-no-dirty-check="true" ng-model="app.passwords.newPassword"/>
               </md-input-container>
 
               <md-input-container class="md-block" flex="50">
                 <label><var:string label:value="Confirmation"/>
                 </label>
-	        <input type="password" ng-model="app.passwords.newPasswordConfirmation"/>
+	        <input type="password" sg-no-dirty-check="true" ng-model="app.passwords.newPasswordConfirmation"/>
               </md-input-container>
             </div>
             <div layout="row" layout-align="end center">
