@@ -12,6 +12,7 @@ Enhancements
 Bug fixes
  - [web] fixed attachment path when inside multiple body parts
  - [web] fixed email reminder with attendees (#4115)
+ - [web] prevented form to be marked dirty when changing password (#4138)
  - [core] cherry-picked comma escaping fix from v2 (#3296)
  - [core] fix sogo-tool restore potentially crashing on corrupted data (#4048)
  - [core] handle properly mails using windows-1255 charset (#4124)
